--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "html-loader": "^0.4.3",
+    "imports-loader": "^0.6.5",
+    "json-loader": "^0.5.4",
     "lodash": "^4.5.0",
     "q": "^1.4.1",
     "webpack": "^1.12.13"
